[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/resourse/theme and stylebox/styleboxflat_modulate_0.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/fonts/font_30.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/font_40.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/font_25.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sprites/ui/notebook/braind_red.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/notebook/brain_white.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ui/notebook/list_sprite.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ui/notebook/part_button_2.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/ui/notebook/part_button_1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/ui/notebook/heart_white.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/ui/notebook/heart_red.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/items/apple.png" type="Texture" id=13]

[node name="HUD" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1070.0

[node name="notebook" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1900.0
margin_bottom = 570.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook"]
margin_right = 450.0
margin_bottom = 570.0
rect_min_size = Vector2( 450, 570 )
texture = ExtResource( 8 )
stretch_mode = 1

[node name="notebook_button" type="PanelContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button"]
margin_right = 450.0
margin_bottom = 570.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer"]
margin_right = 450.0
margin_bottom = 100.0
custom_constants/margin_top = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer"]
margin_top = 104.0
margin_right = 450.0
margin_bottom = 164.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer/HBoxContainer"]
margin_right = 416.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="button_part_1_1" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer/HBoxContainer" groups=["button_part_1"]]
margin_left = 420.0
margin_right = 450.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 60 )
texture = ExtResource( 10 )
stretch_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer"]
margin_top = 168.0
margin_right = 450.0
margin_bottom = 228.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer/HBoxContainer2"]
margin_right = 416.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="button_part_1_2" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer/HBoxContainer2" groups=["button_part_1"]]
modulate = Color( 1, 1, 1, 0 )
margin_left = 420.0
margin_right = 450.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 60 )
texture = ExtResource( 10 )
stretch_mode = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer"]
margin_top = 232.0
margin_right = 450.0
margin_bottom = 292.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer/HBoxContainer3"]
margin_right = 416.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="button_part_1_3" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer/HBoxContainer3" groups=["button_part_1"]]
modulate = Color( 1, 1, 1, 0 )
margin_left = 420.0
margin_right = 450.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 60 )
texture = ExtResource( 10 )
stretch_mode = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer"]
margin_top = 296.0
margin_right = 450.0
margin_bottom = 356.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer/HBoxContainer4"]
margin_right = 416.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="button_part_1_4" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/TextureRect/notebook_button/VBoxContainer/HBoxContainer4" groups=["button_part_1"]]
modulate = Color( 1, 1, 1, 0 )
margin_left = 420.0
margin_right = 450.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 60 )
texture = ExtResource( 10 )
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect"]
margin_right = 450.0
margin_bottom = 570.0
custom_constants/margin_right = 43
custom_constants/margin_top = 80
custom_constants/margin_left = 31
custom_constants/margin_bottom = 20

[node name="notebook_notes" type="PanelContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer" groups=["notebook_content_page"]]
margin_left = 31.0
margin_top = 80.0
margin_right = 407.0
margin_bottom = 550.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_notes"]
margin_right = 376.0
margin_bottom = 470.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_notes/VBoxContainer"]
margin_right = 376.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Заметки"
align = 1
valign = 1

[node name="notebook_inventory" type="PanelContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer" groups=["notebook_content_page"]]
visible = false
margin_left = 31.0
margin_top = 80.0
margin_right = 407.0
margin_bottom = 550.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_inventory"]
margin_right = 376.0
margin_bottom = 470.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_inventory/VBoxContainer"]
margin_right = 376.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Инвентарь"
align = 1
valign = 1

[node name="notebook_status" type="PanelContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer" groups=["notebook_content_page"]]
visible = false
margin_left = 31.0
margin_top = 80.0
margin_right = 407.0
margin_bottom = 550.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status"]
margin_right = 376.0
margin_bottom = 859.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer"]
margin_right = 376.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Статус"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer"]
margin_top = 44.0
margin_right = 376.0
margin_bottom = 64.0
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer"]
margin_top = 68.0
margin_right = 376.0
margin_bottom = 399.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer"]
margin_right = 243.0
margin_bottom = 331.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer"]
margin_left = 247.0
margin_right = 367.0
margin_bottom = 331.0

[node name="heart_bar" type="PanelContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 177.0
rect_min_size = Vector2( 120, 150 )
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer/VBoxContainer/heart_bar"]
margin_right = 120.0
margin_bottom = 177.0

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer/VBoxContainer/heart_bar/VBoxContainer"]
margin_right = 120.0
margin_bottom = 147.0
rect_min_size = Vector2( 112, 147 )
texture_over = ExtResource( 11 )
texture_progress = ExtResource( 12 )
fill_mode = 3
nine_patch_stretch = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer/VBoxContainer/heart_bar/VBoxContainer"]
margin_top = 151.0
margin_right = 120.0
margin_bottom = 177.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1

[node name="brain_bar" type="PanelContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 120.0
margin_bottom = 331.0
rect_min_size = Vector2( 120, 150 )
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer/VBoxContainer/brain_bar"]
margin_right = 120.0
margin_bottom = 150.0

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer/VBoxContainer/brain_bar/VBoxContainer"]
margin_right = 119.0
margin_bottom = 112.0
rect_min_size = Vector2( 119, 112 )
size_flags_horizontal = 0
size_flags_vertical = 0
step = 0.1
value = 100.0
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
fill_mode = 3
nine_patch_stretch = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer/VBoxContainer/brain_bar/VBoxContainer"]
margin_top = 116.0
margin_right = 120.0
margin_bottom = 142.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "100"
align = 1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_status/VBoxContainer/HBoxContainer"]
margin_left = 371.0
margin_right = 376.0
margin_bottom = 331.0
rect_min_size = Vector2( 5, 0 )

[node name="notebook_map" type="PanelContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer" groups=["notebook_content_page"]]
visible = false
margin_left = 31.0
margin_top = 80.0
margin_right = 407.0
margin_bottom = 550.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_map"]
margin_right = 376.0
margin_bottom = 470.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/notebook_map/VBoxContainer"]
margin_right = 376.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Карта"
align = 1
valign = 1

[node name="note_shablon" type="PanelContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer"]
visible = false
margin_left = 31.0
margin_top = 80.0
margin_right = 407.0
margin_bottom = 550.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/note_shablon"]
margin_right = 376.0
margin_bottom = 470.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/note_shablon/VBoxContainer"]
margin_right = 376.0
margin_bottom = 40.0

[node name="note_shablon_name" type="Label" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/note_shablon/VBoxContainer/HBoxContainer"]
margin_right = 194.0
margin_bottom = 40.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Тут  текст"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/note_shablon/VBoxContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 340.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/note_shablon/VBoxContainer/HBoxContainer"]
margin_left = 344.0
margin_right = 376.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 13 )
stretch_mode = 1

[node name="note_shablon_content" type="Label" parent="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/note_shablon/VBoxContainer"]
margin_top = 44.0
margin_right = 376.0
margin_bottom = 143.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Тут какой-то текст в общем мне пизда и хз что делать, вооот"
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/notebook"]
margin_left = 450.0
margin_right = 480.0
margin_bottom = 570.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/notebook/VBoxContainer"]
margin_right = 30.0
margin_bottom = 100.0
custom_constants/margin_top = 100

[node name="button_part_2_1" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/VBoxContainer" groups=["button_part_2"]]
margin_top = 104.0
margin_right = 30.0
margin_bottom = 164.0
rect_min_size = Vector2( 30, 60 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="button_part_2_2" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/VBoxContainer" groups=["button_part_2"]]
margin_top = 168.0
margin_right = 30.0
margin_bottom = 228.0
rect_min_size = Vector2( 30, 60 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="button_part_2_3" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/VBoxContainer" groups=["button_part_2"]]
margin_top = 232.0
margin_right = 30.0
margin_bottom = 292.0
rect_min_size = Vector2( 30, 60 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="button_part_2_4" type="TextureRect" parent="MarginContainer/VBoxContainer/notebook/VBoxContainer" groups=["button_part_2"]]
margin_top = 296.0
margin_right = 30.0
margin_bottom = 356.0
rect_min_size = Vector2( 30, 60 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="dialogue" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_left = 325.0
margin_top = 810.0
margin_right = 1575.0
margin_bottom = 1060.0
rect_min_size = Vector2( 1250, 250 )
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/dialogue"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1243.0
margin_bottom = 243.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/dialogue/VBoxContainer"]
margin_right = 1236.0
margin_bottom = 235.0
custom_constants/separation = 20

[node name="image" type="PanelContainer" parent="MarginContainer/VBoxContainer/dialogue/VBoxContainer/HBoxContainer"]
margin_right = 210.0
margin_bottom = 235.0
rect_min_size = Vector2( 210, 235 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/dialogue/VBoxContainer/HBoxContainer/image"]
margin_right = 210.0
margin_bottom = 235.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/dialogue/VBoxContainer/HBoxContainer/image/VBoxContainer"]
margin_left = 15.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 185.0
rect_min_size = Vector2( 180, 180 )
size_flags_horizontal = 6
size_flags_vertical = 6
expand = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/dialogue/VBoxContainer/HBoxContainer/image/VBoxContainer"]
margin_top = 195.0
margin_right = 210.0
margin_bottom = 235.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Гоша"
align = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/dialogue/VBoxContainer/HBoxContainer"]
margin_left = 230.0
margin_right = 1236.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Текст"
align = 1
valign = 1
autowrap = true

[node name="dialog_chose" type="PanelContainer" parent="MarginContainer"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1070.0
custom_styles/panel = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/dialog_chose"]
margin_right = 1900.0
margin_bottom = 1060.0

[node name="Control" type="Control" parent="MarginContainer/dialog_chose/VBoxContainer"]
margin_right = 1900.0
margin_bottom = 426.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/dialog_chose/VBoxContainer"]
margin_top = 430.0
margin_right = 1900.0
margin_bottom = 630.0
custom_styles/panel = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/dialog_chose/VBoxContainer/PanelContainer"]
margin_right = 1900.0
margin_bottom = 200.0

[node name="Control" type="Control" parent="MarginContainer/dialog_chose/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 796.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/dialog_chose/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 800.0
margin_right = 1100.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/dialog_chose/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/dialog_chose/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/MarginContainer"]
margin_right = 286.0
margin_bottom = 186.0

[node name="Control2" type="Control" parent="MarginContainer/dialog_chose/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1104.0
margin_right = 1900.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="MarginContainer/dialog_chose/VBoxContainer"]
margin_top = 634.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_vertical = 3

[connection signal="gui_input" from="MarginContainer/VBoxContainer/notebook/TextureRect/MarginContainer/note_shablon/VBoxContainer/HBoxContainer/TextureRect" to="." method="_on_TextureRect_gui_input"]
